src/tests/code/shaders/parse-uniforms/valid/timed-type-only.frag
// { type: "timed", label: "Ticking" }
uniform float ticking;

void main() {
    gl_FragColor = vec4(ticking);
}
