src/tests/code/shaders/parse-uniforms/invalid/timed-bad-timescale.frag
// { type: "timed", timeScale: "fast" }
uniform float clock;

void main() {
    gl_FragColor = vec4(clock);
}
